11-10-2024:
- keyd: remap caps lock to escape when tapped and meta when held instead of control
- new keybind layout for i3 using the new meta


11-07-2024:
- dunst will now display notifications in i3 when taking screenshots
- xdg.userDirs are now enabled by default
- refactored i3 setup: seperated config into seperate file.
- seperate scripts file for hyprland.
- cleanup omori-calendar-project service: seperate script file
- omori-calendar-project will now issue a warning if gnome is enabled at the same time


11-06-2024:
- removed game-container server in favor of alpine linux LXC containers instead
- reincluded the default kernel modules for servers after alot of pain where the OS couldn't mount the root drive due to missing modules


11-05-2024:
- polybar: 
add more mkDefault for more flexible configuration
change polybar default font size from 18 to 16
- i3lock:
now writes a script binary for the user's shell path instead of running a xdg config file.
binary called "i3lock" and will replace the default created by nixos option services.xserver.windowManager.i3.enable when run as a normal user
home-manager refactor:
  - rename minimal.nix to essentials.nix and is the default profile for home-manager. It contains many apps that are very useful and most profiles should import this
  - profiles are now required for each username and will contain important information shared between all of the users with that name on every machine (such as git email and username)
  these profiles can include some extra configuration under /hosts/hostname/users/username/preferences.nix that will be exclusive to that machine. (this file is no longer required)
Assigned the proper git config to iron
readd thePumpkinPatch to the army


11-04-2024:
- add changelog.txt
- i3lock module
- add Window swapping to i3:
use (Mod)+Shift+arrows to swap windows, sometimes the diagnals will swap and idk how to fix it