@@ -1,7 +1,6 @@
-{ pkgs, config, lib, ... }:
+{ pkgs, config, lib, keys, ... }:
 let
   username = "g";
-  ssh-key = "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKNRHd6NLt4Yd9y5Enu54fJ/a2VCrRgbvfMuom3zn5zg";
 in
 {
   sops.secrets.${username}.neededForUsers = true;
@@ -10,7 +9,7 @@ in
     hashedPasswordFile = lib.mkIf (config.sops.secrets ? ${username}) config.sops.secrets.${username}.path;
     password = null;
     isNormalUser = true;
-    openssh.authorizedKeys.keys = [ ssh-key ];
+    openssh.authorizedKeys.keys = [ keys.g_pub ];
     shell = pkgs.zsh;
     extraGroups = [
       "networkmanager"
