@@ -1,19 +1,20 @@
+{ keys, config, ... }:
 {
   networking.firewall = {
-    allowedUDPPorts = [ 51820 ];
+    allowedUDPPorts = [ config.networking.wireguard.interfaces.wg0.listenPort ];
   };
   networking.wireguard.interfaces = {
     wg0 = {
-      ips = [ "10.100.0.2/24" ];
+      ips = [ "10.0.0.2/24" ];
       listenPort = 51820;
       privateKeyFile = "/etc/wireguard/private_key";
 
-      # server
       peers = [
+        # school wireguard server
         {
-          publicKey = "PMxNloIPW9xEROdyZAbPl6CtkrCqSRIZmkcqj9MK5lk=";
+          publicKey = keys.wireguard_server_school;
           allowedIPs = [ "0.0.0.0/0" ];
-          name = "Home2";
+          name = "School";
           # Or forward only particular subnets
           #allowedIPs = [ "10.100.0.1" "91.108.12.0/22" ];
 
