@@ -1,18 +1,8 @@
 # Vanilla MC 1.12.2
-{ pkgs, lib, ... }:
+{ pkgs, lib, keys, ... }:
 {
-  # join zerotier network
-  services.zerotierone = {
-    enable = true;
-    joinNetworks = [
-      "d5e5fb653723b80e"
-    ];
-  };
-
   users.users."root" = {
-    openssh.authorizedKeys.keys = [
-      "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKNRHd6NLt4Yd9y5Enu54fJ/a2VCrRgbvfMuom3zn5zg"
-    ];
+    openssh.authorizedKeys.keys = [ keys.g_pub ];
   };
 
   networking.firewall.allowedTCPPorts = [ 25565 ]; # minecraft port
