@@ -1,12 +1,11 @@
-{ pkgs, config, ... }:
+# unused, much easier to just do this on the actual router. Saved for reference purposes
+{ pkgs, config, keys, ... }:
 let
   iptables = "${pkgs.iptables}/bin/iptables";
 in
 {
   users.users."root" = {
-    openssh.authorizedKeys.keys = [
-      "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKNRHd6NLt4Yd9y5Enu54fJ/a2VCrRgbvfMuom3zn5zg"
-    ];
+    openssh.authorizedKeys.keys = [ keys.g_pub ];
   };
 
   nix.settings.trusted-users = [ "g" ];
@@ -26,20 +25,20 @@ in
     firewall.allowedUDPPorts = [ config.networking.wireguard.interfaces.wg0.listenPort ];
     wireguard.interfaces = {
       wg0 = {
-        ips = [ "10.100.0.1/32" ];
+        ips = [ "10.0.0.1/24" ];
         listenPort = 51820;
         postSetup = ''
-          ${iptables} -t nat -A POSTROUTING -s 10.100.0.0/32 -o enp6s18 -j MASQUERADE
+          ${iptables} -t nat -A POSTROUTING -s 10.0.0.0/24 -o enp6s18 -j MASQUERADE
         '';
         postShutdown = ''
-          ${iptables} -t nat -D POSTROUTING -s 10.100.0.0/32 -o enp6s18 -j MASQUERADE
+          ${iptables} -t nat -D POSTROUTING -s 10.0.0.0/24 -o enp6s18 -j MASQUERADE
         '';
         privateKeyFile = config.sops.secrets.private_key.path;
         peers = [
           {
             name = "cypher";
-            publicKey = "CZvnEsivl9osBYtVmtGiu33fvkhlifMdTBWb+/xaEkE=";
-            allowedIPs = [ "10.100.0.2/32" ];
+            publicKey = keys.cypher_wireguard;
+            allowedIPs = [ "10.0.0.2/32" ];
           }
         ];
       };
